fix: removed error for testing fix: centered error popup on mobile feat: Added some extra context for promise rejections

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ select:focus-visible {
 }
 
 dialog {
-  padding: 2ex 6ex;
+  padding: 0;
   background: none;
   min-width: 320px;
   max-width: 60ex;
